--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Password Check</h1>
-    <form action="">
-      <input type="text" />
-      <input type="text" />
-      <button>Show Passwords</button>
-    </form>
-    <p>Passwords are equal</p>
-    <p>Lower Case Letters</p>
-    <p>Upper Case Letters</p>
-    <p>Contains Numbers</p>
-    <p>At least 10 characters long</p>
-    <script src="script.js"></script>
+    <header>
+      <h1>Password Check</h1>
+    </header>
+    <main>
+      <section class="main-section-form">
+        <form class="" action="">
+          <br />
+          <input class="main-section-input" type="text" /><br />
+          <input class="main-section-input" type="text" /><br />
+          <button class="main-section-button">Show Passwords</button>
+        </form>
+      </section>
+      <section class="main-section-p">
+        <p>Passwords are equal</p>
+        <p>Lower Case Letters</p>
+        <p>Upper Case Letters</p>
+        <p>Contains Numbers</p>
+        <p>At least 10 characters long</p>
+      </section>
+      <script src="script.js"></script>
+    </main>
   </body>
 </html>
