feature: refactor css style

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <section class="main-section-form">
         <form class="" action="">
           <br />
-          <input class="main-section-input" type="text" /><br />
-          <input class="main-section-input" type="text" /><br />
-          <button class="main-section-button">Show Passwords</button>
+          <input class="main-section-input" type="password" /><br />
+          <input class="main-section-input" type="password" /><br />
+          <button class="main-section-button" style="outline: none">
+            Show Passwords
+          </button>
         </form>
       </section>
       <section class="main-section-p">
