--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
       <section class="main-section-form">
         <form class="" action="">
           <br />
-          <input class="main-section-input" type="password" /><br />
-          <input class="main-section-input" type="password" /><br />
-          <button class="main-section-button" style="outline: none">
+          <input id="input1" class="main-section-input" type="password" /><br />
+          <input id="input2" class="main-section-input" type="password" /><br />
+          <button id="showPassword" class="main-section-button">
             Show Passwords
           </button>
         </form>
       </section>
       <section class="main-section-p">
         <p>Passwords are equal</p>
+        <b class="input" id="pw-equal"></b>
         <p>Lower Case Letters</p>
+        <b class="input" id="pw-lowercase"></b>
         <p>Upper Case Letters</p>
+        <b class="input" id="pw-uppercase"></b>
         <p>Contains Numbers</p>
+        <b class="input" id="pw-numbers"></b>
         <p>At least 10 characters long</p>
+        <b class="input" id="pw-char"></b>
       </section>
       <script src="script.js"></script>
     </main>
