featuare: adds lowerCase, upperCase, numberCheck, charCheck, pwChecks

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     </header>
     <main>
       <section class="main-section-form">
-        <form class="" action="">
+        <form onsubmit="return false">
           <br />
           <input id="input1" class="main-section-input" type="password" /><br />
           <input id="input2" class="main-section-input" type="password" /><br />
           <button id="showPassword" class="main-section-button">
-            Show Passwords
+            Show Password
           </button>
         </form>
       </section>
       <section class="main-section-p">
         <p>Passwords are equal</p>
-        <b class="input" id="pw-equal"></b>
+        <span class="input" id="pw-equal">❌</span>
         <p>Lower Case Letters</p>
-        <b class="input" id="pw-lowercase"></b>
+        <b class="input" id="pw-lowercase">❌</b>
         <p>Upper Case Letters</p>
-        <b class="input" id="pw-uppercase"></b>
+        <b class="input" id="pw-uppercase">❌</b>
         <p>Contains Numbers</p>
-        <b class="input" id="pw-numbers"></b>
+        <b class="input" id="pw-numbers">❌</b>
         <p>At least 10 characters long</p>
-        <b class="input" id="pw-char"></b>
+        <b class="input" id="pw-char">❌</b>
       </section>
       <script src="script.js"></script>
     </main>
