fix: fix layout bugs

--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
         </form>
       </section>
       <section class="main-section-p">
-        <p>Passwords are equal</p>
-        <span class="input" id="pw-equal">❌</span>
-        <p>Lower Case Letters</p>
-        <b class="input" id="pw-lowercase">❌</b>
-        <p>Upper Case Letters</p>
-        <b class="input" id="pw-uppercase">❌</b>
-        <p>Contains Numbers</p>
-        <b class="input" id="pw-numbers">❌</b>
-        <p>At least 10 characters long</p>
-        <b class="input" id="pw-char">❌</b>
+        <p>Passwords are equal<span class="input" id="pw-equal">❌</span></p>
+
+        <p>Lower Case Letters<span class="input" id="pw-lowercase">❌</span></p>
+
+        <p>Upper Case Letters<span class="input" id="pw-uppercase">❌</span></p>
+
+        <p>Contains Numbers<span class="input" id="pw-numbers">❌</span></p>
+
+        <p>
+          At least 10 characters long<span class="input" id="pw-char">❌</span>
+        </p>
       </section>
       <script src="script.js"></script>
     </main>
